# cHasky

./: .gitignore  Activation.cpp  Activation.h  CMakeLists.txt  Edge.cpp  Edge.h  Layer.cpp  Layer.h  Makefile  Parameter.h  Projection.cpp  Projection.h  README.md  Repository.cpp  Repository.h  compile_protobufs.sh
chasky/api/: chasky.swig  chasky_api.h  compile_swig.sh  session.cc  session.h  session.swig
chasky/client/: operator.py
chasky/common/: macros.h  stat.cc  stat.h  stat_test.cc  string_piece.cc  string_piece.h  string_piece_test.cc  strings.cc  strings.h  strings_test.cc  util.h
chasky/core/common/: eigen_matrix.h  eigen_matrix_test.cc  eigen_vector.cc  eigen_vector.h  eigen_vector_test.cc  matrix.h  register.h  status.cc  status.h  status_test.cc  vector.cc  vector.h
chasky/core/framework/: argument.cc  argument.h  argument.proto  argument_def_builder.h  argument_field.cc  argument_field.h  argument_test.cc  attr_value.proto  attr_value_util.cc  attr_value_util.h  attr_value_util_test.cc  data_provider.cc  data_provider.h  data_provider.proto  data_provider_def_builder.h  data_provider_test.cc  edge.cc  edge.h  edge_def_builder.h  edge_utils.cc  edge_utils.h  exec_context.cc  exec_context.h  func.cc  func.h  function.cc  function.h  function.proto  function_def_builder.cc  function_def_builder.h  function_def_builder_test.cc  function_test.cc  graph.cc  graph.h  graph.proto  graph_def_builder.h  graph_test.cc  graph_utils.h  kernel.h  node.cc  (+10 more)
chasky/core/functions/: AddN.cc  AddN.h  AddN_def.h  AddN_test.cc  FullyConnectedFunc.cc  FullyConnectedFunc.h  FullyConnectedFunc_def.h  IdenticalFunc.h  IdenticalFunc_def.h  ListAgent.h  NullFunc.h  NullFunc_def.h  addn_func.cc  addn_func.h  fully_connected_func.cc  fully_connected_func.h  function_def.h  identical_func.cc  identical_func.h  null_func.cc  null_func.h  rmse_loss_func.cc  rmse_loss_func.h  s
chasky/core/runtime/: edge_lib.cc  edge_lib.h  exec_mgr.h  graph_builder.cc  graph_builder.h  graph_builder_test.cc  node_lib.cc  node_lib.h  parameter_lib.cc  parameter_lib.h  postbox.cc  postbox.h  postbox_test.cc  session.cc  session.h  session_test.cc  state.h
chasky/test/: test.cc
layers/: NNProjection.cpp  NNProjection.h
proto/: Argument.proto  Data.proto  LayerConfig.pb.cc  LayerConfig.pb.h  LayerConfig.proto  LayerConfig_pb2.py  Makefile  ParameterConfig.proto  Projection.proto  ProjectionConfig.proto  build.sh
python/: chasky_test.py
python/chasky/: argument_def_builder.py  attr_value_builder.py  config_helper.py  error.py  functions.py  graph_def_builder.py  node_def_builder.py
unittest/: test.cpp  test_Edge.h
unittest/layers/: test_NNProjection.h
unittest/proto/: LayerConfig.h
unittest/utils/: test_Vec.h
utils/: all.h  common.h  mat.cpp  mat.h  str.cpp  str.h  string.h  vec.cpp  vec.h
utils/vec.o.dSYM/Contents/: Info.plist
